# pygobject-stubs

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Geoclue.pyi  MANIFEST.in  MANIFEST.ini  README.md  README.rst  meson.build  pyproject.toml  setup.cfg  setup.py  shell.nix
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: codespell.yml  lint.yml  mypy test.yml  publish.yml  python-tests.yml  tests.yml
examples/: gtk.py
gi-stubs/: __init__.pyi
gi-stubs/__multi_version_stubs/: Soup2.pyi
gi-stubs/repository/: AppIndicator3.pyi  Atk.pyi  AyatanaAppIndicator3.pyi  Farstream.pyi  GIRepository.pyi  GLib.pyi  GModule.pyi  GObject.pyi  GSound.pyi  Gdk.pyi  GdkPixbuf.pyi  Geoclue.pyi  Gio.pyi  Gspell.pyi  Gst.pyi  GstPbutils.pyi  Gtk.pyi  GtkSource.pyi  Pango.pyi  PangoCairo.pyi  Soup.pyi
npins/: sources.json
pep517backend/: backend.py
src/: meson.build
src/gi-stubs/: __init__.pyi  _error.pyi  _gi.pyi  _gtktemplate.pyi  _propertyhelper.pyi  _signalhelper.pyi  _signature.pyi  events.pyi
src/gi-stubs/__multi_version_stubs/: Gtk3.pyi  Soup2.pyi
src/gi-stubs/overrides/: __init__.pyi  _gi_gst.pyi
src/gi-stubs/repository/: Adw.pyi  AppIndicator3.pyi  AppStream.pyi  Aravis.pyi  Atk.pyi  Atspi.pyi  AyatanaAppIndicator3.pyi  DBus.pyi  DBusGLib.pyi  ECal.pyi  EDataServer.pyi  Farstream.pyi  Flatpak.pyi  GExiv2.pyi  GIRepository.pyi  GLib.pyi  GLibUnix.pyi  GLibWin32.pyi  GModule.pyi  GObject.pyi  GSound.pyi  GdkPixbuf.pyi  GdkWayland.pyi  GdkX11.pyi  Geoclue.pyi  Ggit.pyi  Gio.pyi  GioUnix.pyi  GioWin32.pyi  Gly.pyi  GlyGtk4.pyi  Goa.pyi  Graphene.pyi  Gsk.pyi  Gspell.pyi  Gst.pyi  GstApp.pyi  GstAudio.pyi  GstBase.pyi  GstPbutils.pyi  (+43 more)
src/pygobject_stub_generator/: __main__.py  arguments.py  class_info.py  import_info.py  main.py  parse.py  property_info.py  stub.py  type_var_info.py  utils.py
tools/: bump_version.py  generate.py  gir.py  meson.build  parse.py  update.py  update_all.py
tools/overrides/: Gtk-4.0.yaml
