[build-system]
requires = ["setuptools >= 65.0.0"]
build-backend = "backend"
backend-path = ["pep517backend"]

[project]
name = "PyGObject-stubs"
version = "2.6.0"
description = "Typing stubs for PyGObject"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "LGPL-2.1"}
authors = [
  {email = "reiter.christoph@gmail.com"},
  {name = "Christoph Reiter"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "black",
    "codespell",
    "isort",
    "mypy",
    "pre-commit",
    "PyGObject",
]

[project.urls]
homepage = "https://github.com/pygobject/pygobject-stubs"
repository = "https://github.com/pygobject/pygobject-stubs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.codespell]
skip = "*__pycache__*,.mypy_cache,.git,test,*.pyi"
ignore-words-list = """
    astroid,
    inout"""

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
group_by_package = true
known_typing = ["typing"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_gitignore = true
