[build-system]
requires = ["setuptools >= 65.0.0"]
build-backend = "backend"
backend-path = ["pep517backend"]

[project]
name = "PyGObject-stubs"
version = "2.16.0"
description = "Typing stubs for PyGObject"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "LGPL-2.1"}
authors = [
  {email = "reiter.christoph@gmail.com"},
  {name = "Christoph Reiter"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "typing_extensions",
]

[project.optional-dependencies]
dev = [
    "codespell>=2.4.1",
    "isort>=6.0.1",
    "ruff>=0.12.7",
    "pre-commit",
    "PyGObject",
]

[project.urls]
homepage = "https://github.com/pygobject/pygobject-stubs"
repository = "https://github.com/pygobject/pygobject-stubs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]

[tool.codespell]
skip = "*__pycache__*,.mypy_cache,.git,pyproject.toml,test,*.pyi,*venv"
ignore-words-list = """
    astroid,
    inout"""

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
group_by_package = true
known_typing = ["typing"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_gitignore = true

[tool.ruff]
line-length = 88
exclude = [
  ".eggs",
  ".git",
  ".ruff_cache",
  ".venv",
]

target-version = "py39"

[tool.ruff.lint]
select = [
    "PYI",   # flake8-pyi
]
ignore = [
  "PYI001",  # Name of private `TypeVar` must start with `_`
  "PYI011",  # Only simple default values allowed for typed arguments
  "PYI019",  # Methods like `__or__` should return `typing.Self` instead of a custom `TypeVar`
  "PYI021",  # Docstrings should not be included in stubs
  "PYI026",  # Use `typing_extensions.TypeAlias`
  "PYI052",  # Need type annotation
  "PYI054",  # Numeric literals with a string representation longer than ten characters are not permitted
]
