[metadata]
name = PyGObject-stubs
version = 0.0.9
description = Typing stubs for PyGobject
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU Lesser General Public License v2.1
author = Christoph Reiter
author_email = reiter.christoph@gmail.com
url = https://github.com/pygobject/pygobject-stubs
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent

[options]
packages =
    gi-stubs
include_package_data = True

[options.package_data]
* = *.pyi, */*.pyi

[options.extras_require]
all =
    %(dev)s
    %(generate)s
dev =
    mypy
    flake8
    flake8-pyi
    setuptools
    wheel
generate =
    mypy
    PyGObject

[flake8]
ignore = W391,E302,E704,E701,E305
