[metadata]
name = PyGObject_stubs
version = 0.0.9
description = Typing stubs for PyGobject
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pygobject/pygobject-stubs
author = Christoph Reiter
author_email = reiter.christoph@gmail.com
license = LGPL-2.1
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages =
    gi-stubs
include_package_data = True

[options.extras_require]
all =
    %(dev)s
    %(generate)s
dev =
    flake8
    flake8-pyi
    mypy
    per-commit
generate =
    PyGObject

[options.package_data]
* = *.pyi, */*.pyi

[flake8]
ignore = W503
max-line-length = 120

[isort]
profile = black

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

[tool:black]
line-length = 120
